<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>iscteiul.ista</groupId>
  <artifactId>ES-Project-TerritoryManagement</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>ES-Project-TerritoryManagement</name>
  <url>http://www.example.com</url>

  <!-- ──────────────────────── -->
  <!-- General project settings -->
  <!-- ──────────────────────── -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <!-- ─────────────────────────────── -->
  <!-- Dependency management & imports -->
  <!-- ─────────────────────────────── -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- ───────────── -->
  <!-- Dependencies  -->
  <!-- ───────────── -->
  <dependencies>
    <!-- JUnit 5 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Project libraries (unchanged) -->
    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>5.10</version>
    </dependency>
    <dependency>
      <groupId>org.locationtech.jts</groupId>
      <artifactId>jts-core</artifactId>
      <version>1.20.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.18</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
      <version>1.5.1</version>
    </dependency>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-core</artifactId>
      <version>1.3</version>
    </dependency>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-ui-javafx</artifactId>
      <version>2.0</version>
    </dependency>
    <!-- PostgreSQL JDBC Driver -->
    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.5</version>
    </dependency>
  </dependencies>

  <!-- ─────────── -->
  <!-- Build setup -->
  <!-- ─────────── -->
  <build>
    <plugins>
      <!-- JaCoCo plugin -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- ──────────────────────── -->
      <!-- PMD & CPD static analysis -->
      <!-- ──────────────────────── -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.26.0</version>

        <!-- Configuration -->
        <configuration>
          <!-- Fails the build when a rule is violated -->
          <failOnViolation>false</failOnViolation>
          <!-- Show violations in the console -->
          <printFailingErrors>true</printFailingErrors>
          <!-- Use PMD’s built-in quickstart ruleset.
               Replace or extend with your own if needed. -->
          <rulesets>
            <ruleset>/rulesets/java/quickstart.xml</ruleset>
          </rulesets>
          <!-- tell PMD/CPD where JXR puts the cross-reference -->
          <xrefLocation>${project.reporting.outputDirectory}/xref</xrefLocation>
        </configuration>

        <!-- Automatically run during 'verify' -->
        <executions>
          <execution>
            <id>pmd-and-cpd</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>      <!-- PMD rules -->
              <goal>cpd-check</goal>  <!-- copy/paste detection -->
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Add this right next to the JaCoCo and PMD plugins -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.3.1</version>

        <!-- Generate xref early enough that PMD can find it -->
        <executions>
          <execution>
            <id>generate-xref</id>
            <phase>process-sources</phase>  <!-- or 'prepare-package', 'site', etc. -->
            <goals><goal>jxr</goal></goals>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <!-- Core plugin versions locked here (unchanged) -->
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
